5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1798_2564.log
== TEST (2019-06-05 14:56:34) 
-- CODE:

for i in range(3):
	print(i)
-- OUTPUT:
0
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:57:06) 
-- CODE:
a = [4, 0, 2, 3, 1, 3]
for i in range(size(a)):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:57:23) 
-- CODE:
from numpy import*

a = [4, 0, 2, 3, 1, 3]

for i in range(size(a)):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:58:31) 
-- CODE:
from numpy import*

a = [4, 0, 2, 3, 1, 3]

for i in range(size(a)):
	print(i)
	
for i in a:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:59:11) 
-- CODE:
from numpy import*
a = [4, 0, 2, 3, 1, 3]
for i in range(size(a)):
	print(i)
print("")
for i in a:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:05:55) 
-- CODE:
from numpy import*
a = "josias gomes"

b = a.split(' ')
print(b[0])
print(b[1])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:40:56) 
-- CODE:
from numpy import*
time = array(eval(input("Gols efetudados: ")))
adver =array(eval(input("Gols do adversario: ")))

vet = zeros(3, dtype=int)

for i in range(size(time)):
	if(time[i] > adver[i]):
		vet[0] = vet[0] +  1
	elif(time[i] < adver[i]):
		vet[1] = vet[1] + 1
	elif(time[i] == adver[i]):
		vet[2] = vet[2] + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:41:07) 
-- CODE:
from numpy import*
time = array(eval(input("Gols efetudados: ")))
adver =array(eval(input("Gols do adversario: ")))

vet = zeros(3, dtype=int)

for i in range(size(time)):
	if(time[i] > adver[i]):
		vet[0] = vet[0] +  1
	elif(time[i] < adver[i]):
		vet[1] = vet[1] + 1
	elif(time[i] == adver[i]):
		vet[2] = vet[2] + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:41:51) 
-- CODE:
from numpy import*
time = array(eval(input("Gols efetudados: ")))
adver =array(eval(input("Gols do adversario: ")))

vet = zeros(3, dtype=int)

for i in range(size(time)):
	if(time[i] > adver[i]):
		vet[0] = vet[0] +  1
	elif(time[i] < adver[i]):
		vet[1] = vet[1] + 1
	elif(time[i] == adver[i]):
		vet[2] = vet[2] + 1
print(vet)
-- EXECUTION TIME:
1.25746
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 2 3]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 9 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  0  1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:42:22) 
-- CODE:
from numpy import*
time = array(eval(input("Gols efetudados: ")))
adver =array(eval(input("Gols do adversario: ")))

vet = zeros(3, dtype=int)

for i in range(size(time)):
	if(time[i] > adver[i]):
		vet[0] = vet[0] +  1
	elif(time[i] == adver[i]):
		vet[1] = vet[1] + 1
	elif(time[i] < adver[i]):
		vet[2] = vet[2] + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:42:39) 
-- CODE:
from numpy import*
time = array(eval(input("Gols efetudados: ")))
adver =array(eval(input("Gols do adversario: ")))

vet = zeros(3, dtype=int)

for i in range(size(time)):
	if(time[i] > adver[i]):
		vet[0] = vet[0] +  1
	elif(time[i] == adver[i]):
		vet[1] = vet[1] + 1
	elif(time[i] < adver[i]):
		vet[2] = vet[2] + 1
print(vet)
-- EXECUTION TIME:
1.19007
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
